[package]
name = "s3-log-downloader"
version = "0.1.0"
authors = ["James Brown <jbrown@easypost.com>"]
edition = "2018"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
futures = "0.1"
tokio = "0.1"
tokio-sync = "0.1"
lazy_static = "1"
regex = "1"
clap = "2"
futures-retry = "0.3"
log = "0.4"
env_logger = "0.5"
log-panics = { version = "1" , features = ["with-backtrace"] }
